@@ -1,3 +1,9 @@
+2006-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* fileutil.test: Marked all 20 permission dependent tests as
+	  'notRoot' as they cannot fail when the superuser executes the
+	  testsuite.
+
 2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* fileutil.test: Rewritten to use new features for handling the
